Fix z-index of navigation

--- a/src/components/navigation/navigation.module.scss
+++ b/src/components/navigation/navigation.module.scss
@@ -47,6 +47,7 @@
 .subnavigation {
   display: none;
   position: absolute;
+  z-index: 2;
   padding: 2rem;
   background: black;
 
